--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.6",
     "@tailwindcss/vite": "^4.1.10",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "cors": "^2.8.5",
     "docxtemplater": "^3.65.2",
     "express": "^5.1.0",
@@ -21,25 +23,23 @@
     "framer-motion": "^12.19.2",
     "keen-slider": "^6.8.6",
     "pizzip": "^3.2.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
-    "vite": "^6.3.5",
-    "@vitejs/plugin-react": "^4.4.1"
+    "tailwindcss": "^4.1.10",
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "tailwindcss": "^4.1.10"
+    "prettier-plugin-tailwindcss": "^0.6.13"
   }
 }
